<resources>
    <string name="app_name">青龙看书</string>
    <string name="allow_input">.@0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>
    <string name="tv_read_durprogress">观看至:%s</string>
    <string name="tv_book_name">《%s》</string>
    <string name="tv_searchbook_lastest">最新章节:%s</string>
    <string name="tv_pop_checkaddshelf">是否将《%s》放入书架？</string>
    <string name="tv_importbook_count">共%s个Text文件</string>
    <string name="net_error_10001">没有网络</string>
    <string name="net_error_10002">网络连接超时</string>
    <string name="net_error_10003">数据解析失败</string>

    <string name="check_update">检查更新</string>
    <string name="check_update_contenting">升级到最新版本</string>
    <string name="check_update_contented">已是最新版本</string>

    <string name="about_us">关于青龙</string>
    <string name="contact_us">联系我们</string>
    <string name="suggest">意见反馈</string>
    <string name="setting">退出登录</string>
    <string name="title_home_toolbar_medicine">青龙</string>
    <string name="allin_wx_account">微信公众号：QLong</string>
    <string name="allin_website">阅读网：www.qinglong.cn</string>
    <string name="allin_current_version_code">当前版本1.0.0</string>
    <string name="disclaimer">免责声明</string>
    <string name="activity_create_articles">服务条款</string>
</resources>
