<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/color_FFFFFF"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="118dp"
            android:layout_height="130dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:src="@drawable/logo"/>

        <TextView
            android:id="@+id/tv_versions_introduce"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="4dp"
            android:textColor="@color/color_909090"
            android:lineHeight="15dp"
            android:textSize="13sp"/>
        <TextView
            android:id="@+id/tv_about_allin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:lineSpacingExtra="4dp"
            android:textColor="@color/color_555555"
            android:lineHeight="15dp"
            android:textSize="15sp"
            android:text="当前版本1.0"/>
        <!--唯医网 公众号-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:gravity="center"
                app:srcCompat="@drawable/about_allin_we_chat"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:gravity="center_vertical"
                android:text="@string/allin_wx_account"
                android:textColor="@color/color_555555"
                android:textSize="15sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:srcCompat="@drawable/about_allin_web"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:text="@string/allin_website"
                android:gravity="center_vertical"
                android:textColor="@color/color_555555"
                android:textSize="15sp"/>
        </LinearLayout>


    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/reference_list_divider"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>
    <RelativeLayout
        android:id="@+id/rl_check_update"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">
        <ImageView
            android:id="@+id/iv_check_update"
            android:layout_width="13dp"
            android:layout_height="13dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:scaleType="fitEnd"
            app:srcCompat="@drawable/customer_arrow_gran"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_centerVertical="true"
            android:text="@string/check_update"
            android:textColor="@color/color_222222"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/tv_check_update_content"
            android:layout_toStartOf="@+id/iv_check_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            tools:text="升级到最新版本"
            android:textColor="@color/color_FF4F4F"
            android:textSize="16sp"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/reference_list_divider"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="@dimen/px28"/>
    <RelativeLayout
        android:id="@+id/rl_allin_score"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="16dp"
        android:visibility="gone">
        <ImageView
            android:layout_width="13dp"
            android:layout_height="13dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:scaleType="fitEnd"
            app:srcCompat="@drawable/customer_arrow_gran"
            tools:ignore="VectorDrawableCompat" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_centerVertical="true"
            android:text="给唯医骨科评分"
            android:textColor="@color/color_222222"
            android:textSize="16sp"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/reference_list_divider"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>
    <RelativeLayout
        android:id="@+id/rl_go_tell_us"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="16dp">
        <ImageView
            android:layout_width="13dp"
            android:layout_height="13dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:scaleType="center"
            app:srcCompat="@drawable/customer_arrow_gran"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_centerVertical="true"
            android:text="联系我们"
            android:textColor="@color/color_222222"
            android:textSize="16sp"
            android:visibility="gone"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/reference_list_divider"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_version_number"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_server_terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_create_articles"
            android:textColor="@color/color_7b95dc"
            android:textSize="13sp"/>

        <View
            android:layout_width="@dimen/px2"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/color_CCCCCC"/>

        <TextView
            android:id="@+id/tv_free_declaration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disclaimer"
            android:textColor="@color/color_7b95dc"
            android:textSize="13sp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_copyOfYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="4dp"
        android:textColor="@color/color_aaaaaa"
        android:textSize="15sp"
        tools:text="河南道阅网络技术公司保留所有权利\nhenan Daoyue Technology Co,Ltd ©2016"/>
</LinearLayout>

